crates/permitlayer-daemon/src/cli/ui/views/snapshots/agentsso__cli__ui__views__tests__agents_loaded.snap
---
source: crates/permitlayer-daemon/src/cli/ui/views/mod.rs
expression: draw(&loaded_app())
---
"┌ agentsso ────────────────────────────────────────────────────────────────────┐"
"│daemon: * running v1.0.0  /  kill: o inactive  /  tokens 2  /  127.0.0.1:3820 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Agents ──────────────────────┐┌ Detail ──────────────────────────────────────┐"
"│> - calendar-bot  (2026-05-28T││press Enter to inspect                        │"
"│  - drive-sync  (2026-05-28T10││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"↑/↓ move · Enter detail · Tab view · r refresh · ? help · q quit                "
