crates/permitlayer-daemon/src/cli/ui/views/snapshots/agentsso__cli__ui__views__tests__error_daemon_unreachable.snap
---
source: crates/permitlayer-daemon/src/cli/ui/views/mod.rs
expression: draw(&app)
---
"┌ agentsso ────────────────────────────────────────────────────────────────────┐"
"│daemon: unreachable — run: agentsso start                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Agents ──────────────────────────────────────────────────────────────────────┐"
"│No agents registered. Run `agentsso quickstart` to create one.                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"daemon not running — run: agentsso start                                        "
