crates/permitlayer-daemon/src/cli/ui/views/snapshots/agentsso__cli__ui__views__tests__kill_active_with_notice.snap
---
source: crates/permitlayer-daemon/src/cli/ui/views/mod.rs
expression: draw(&app)
---
"┌ agentsso ────────────────────────────────────────────────────────────────────┐"
"│daemon: * running v1.0.0  /  kill: * active  /  tokens 0  /  127.0.0.1:3820   │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Agents ──────────────────────┐┌ Detail ──────────────────────────────────────┐"
"│> - calendar-bot  (2026-05-28T││press Enter to inspect                        │"
"│  - drive-sync  (2026-05-28T10││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"kill active · 2 tokens invalidated                                              "
