crates/permitlayer-daemon/src/cli/ui/views/snapshots/agentsso__cli__ui__views__tests__kill_confirm_overlay.snap
---
source: crates/permitlayer-daemon/src/cli/ui/views/mod.rs
expression: draw(&app)
---
"┌ agentsso ────────────────────────────────────────────────────────────────────┐"
"│daemon: * running v1.0.0  /  kill: o inactive  /  tokens 2  /  127.0.0.1:3820 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Agents ──────────────────────┐┌ Detail ──────────────────────────────────────┐"
"│> - calendar-┌ kill switch ─────────────────────────────────────┐             │"
"│  - drive-syn│           Invalidate ALL agent tokens?           │             │"
"│             │    The daemon stops issuing until you resume.    │             │"
"│             │                                                  │             │"
"│             │              [y] yes      [n] cancel             │             │"
"│             │                                                  │             │"
"│             └──────────────────────────────────────────────────┘             │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"Activate kill switch? invalidate ALL tokens  [y] yes  [n] cancel                "
