crates/permitlayer-daemon/src/cli/ui/views/snapshots/agentsso__cli__ui__views__tests__loading_first_fetch.snap
---
source: crates/permitlayer-daemon/src/cli/ui/views/mod.rs
expression: draw(&app)
---
"┌ agentsso ────────────────────────────────────────────────────────────────────┐"
"│daemon: connecting…                                                           │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Agents ──────────────────────────────────────────────────────────────────────┐"
"│No agents registered. Run `agentsso quickstart` to create one.                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"loading… ↑/↓ move · Enter detail · Tab view · r refresh · Ctrl-K kill · ? help ·"
